base/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"name":"frontend","namespace":"redops"},"spec":{"port":{"targetPort":"http"},"tls":{"insecureEdgeTerminationPolicy":"Redirect","termination":"edge"},"to":{"kind":"Service","name":"frontend"}}}
    openshift.io/host.generated: "true"
  creationTimestamp: "2025-07-02T13:50:39Z"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    subresource: status
    time: "2025-07-02T13:50:39Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:port:
          f:targetPort: {}
    manager: kubectl-edit
    operation: Update
    time: "2025-07-02T19:30:52Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:port: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-07-02T20:10:49Z"
  name: frontend
  namespace: redops
  resourceVersion: "27749357"
  uid: a4c00dab-cdcb-4e61-98e4-9282d96e5664
spec:
  host: frontend-redops.redhat-hackathonplus-2025-911fe55cbc5a8a309b6378b73741f03c-0000.us-south.containers.appdomain.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2025-07-02T13:50:39Z"
      status: "True"
      type: Admitted
    host: frontend-redops.redhat-hackathonplus-2025-911fe55cbc5a8a309b6378b73741f03c-0000.us-south.containers.appdomain.cloud
    routerCanonicalHostname: router-default.redhat-hackathonplus-2025-911fe55cbc5a8a309b6378b73741f03c-0000.us-south.containers.appdomain.cloud
    routerName: default
    wildcardPolicy: None
